# ros2_sandbox

./: .gitignore  .pre-commit-config.yaml  test.launch.xml
.github/workflows/: ros-deb-pkg.yaml
ament_copyright_extension/: package.xml  setup.py
ament_copyright_extension/ament_copyright_extension/: licenses.py
ament_copyright_extension/ament_copyright_extension/template/: my_license_contributing.txt  my_license_header.txt
autoware_node/: CMakeLists.txt  package.xml
autoware_node/src/: autoware_node.cpp  autoware_node.hpp  example_node.cpp  example_node.hpp
launch_autoware/: package.xml  setup.cfg  setup.py
launch_autoware/launch_autoware/: __init__.py
launch_autoware/launch_autoware/actions/: __init__.py  struct_set.py  test.py
launch_autoware/launch_autoware/substitutions/: __init__.py  load_yaml.py  struct_get.py
launch_autoware/launch_autoware/utilities/: struct_access.py
ros_deb_pkg_test1/: CMakeLists.txt  package.xml
ros_deb_pkg_test1/src/: main.cpp
ros_deb_pkg_test2/: CMakeLists.txt
src/interface_msgs/: CMakeLists.txt  package.xml
src/interface_msgs/msg/: SampleMessage.msg
src/interface_specs/: CMakeLists.txt  package.xml
src/interface_specs/include/interface_specs/: interface_manager.hpp  message_interface_base.hpp
src/interface_specs/include/interface_specs/sample_color/: base.hpp  dev.hpp  v1.hpp
src/interface_specs/python/: interface_manager.py  message_interface_base.py
src/interface_specs/python/sample_color/: dev.py  v1.py
src/intra_process/: CMakeLists.txt  package.xml
src/intra_process/launch/: intra_process.launch.py  intra_process_mt.launch.py
src/intra_process/src/: consumer.cpp  producer.cpp
src/ros_deb_pkg_test1/: package.xml
src/ros_deb_pkg_test1/launch/: test1.laumch.xml
src/ros_deb_pkg_test1/src/: main.cpp
src/ros_deb_pkg_test2/: package.xml
src/ros_deb_pkg_test2/launch/: test2.laumch.xml
src/ros_deb_pkg_test2/src/: main.cpp
src/sample_launch/: CMakeLists.txt  package.xml
src/sample_nodes/: CMakeLists.txt  package.xml
src/sample_nodes/python/: py_pub_dev.py  py_pub_v1.py  py_sub_dev.py  py_sub_v1.py
src/sample_nodes/src/: cpp_pub_dev.cpp  cpp_pub_dev.hpp  cpp_pub_ros.cpp  cpp_pub_v1.cpp  cpp_pub_v1.hpp  cpp_sub_dev.cpp  cpp_sub_dev.hpp  cpp_sub_ros.cpp  cpp_sub_v1.cpp  cpp_sub_v1.hpp
template_package_cpp/: CMakeLists.txt  package.xml
template_package_cpp/src/: component_node.cpp  component_node.hpp  main.cpp
template_package_cpp/test/: test_main.cpp
template_package_cpp/test/cases/: test_case.cpp
template_package_python/: package.xml  setup.py
