<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ament_copyright_extension</name>
  <version>0.0.0</version>
  <description>Add copyright templates that ament_copyright checks</description>
  <maintainer email="isamu.takagi@tier4.jp">Takagi Isamu</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>ament_copyright</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
