cmake_minimum_required(VERSION 3.14)
project(sample_nodes)

find_package(autoware_cmake REQUIRED)
autoware_package()
ament_auto_add_executable(cpp_pub_dev src/cpp_pub_dev.cpp)
ament_auto_add_executable(cpp_sub_dev src/cpp_sub_dev.cpp)
ament_auto_add_executable(cpp_pub_v1  src/cpp_pub_v1.cpp)
ament_auto_add_executable(cpp_sub_v1  src/cpp_sub_v1.cpp)
ament_auto_add_executable(cpp_pub_ros src/cpp_pub_ros.cpp)
ament_auto_add_executable(cpp_sub_ros src/cpp_sub_ros.cpp)
ament_auto_package()
